tests/ui/cast/unsized-struct-cast.stderr
error[E0606]: casting `&[_; 0]` as `*const Data` is invalid
  --> $DIR/unsized-struct-cast.rs:4:28
   |
LL |     const _: *const Data = &[] as *const Data;
   |                            ^^^^^^^^^^^^^^^^^^

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0606`.
